# factorial

./: .clang-tidy  .gitattributes  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  factorial.cpp  factorialtest.cpp  main.cpp  maincatch.cpp  maintest.cpp  output.txt  simplecompile.sh
.github/workflows/: githubsimplecompile.yml
